--- a/src/component/Page/Manage/index.css
+++ b/src/component/Page/Manage/index.css
@@ -87,6 +87,20 @@
     border-radius: 50%;
     margin-left: 7px;
 }
+.b_bar
+{
+    width: 80%;
+    margin:0 10%;
+    position: fixed;
+    bottom: 0px;
+    height: 45px;
+    border-radius: 20px;
+    padding: 0 20px;
+    background-color: rgb(246, 246, 246);
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
 /* .w_drag-bar::before
 {
     content:"";
